2009.10.29

* Added a first draft of a NaN fix for Windows users.

2009.10.27

* Fixed failing epoch test.
* Sync'ed Launchpad and Google repos.
* Updated TODO.
* Fixed buildParameters in backend.common.
* Removed unused backend.external.buildParameters function.
* Fixed parameters in external backend.
* Fixed failing test in bindings backend.
* Fixed graph formatting.
* More external backend fixes.
* Fixed unit tests in rrd module.
* More unit test cleanups.
* Added testing utilities.
* Added new test runner that using the new testing module.
* Removed old test runners.
* Added unit tests for RRD isntantiation.
* Tweaked test method names.

2009.07.02

* Added a test file for pushing up to launchpad.

2009.07.01

* Updated TODO.
* Updated the admin defs to use the right google username.
* Applied a fix for graphs on Windows machines (colons in filenames causing
problems); patch supplied by Denis Fortin.
* Applied a patch from Denis Fortin for letting Popen handle spaces in
paramaters.
* Applied a fix for an issue that Denis Fortin opened a ticket for regarding
boolean flags not being handled properly.
* Fixed the spelling on Denis' name!

2009.03.30

* Added update function to bindings wrapper.
* Stubbed out fetch, dump, and load functions.
* Added a graph function to the bindings wrapper.
* Added dump and load functions to the bindings wrapper.
* Added fetch wrapper for bindings.
* Completely rearranged the info method/function/dispatch for symmetry between
the two backends.
* Added an info wrapper for bindings.
* Finished touching up the bindings dispatcher.
* Added doctests for bindings-enabled RRD to the bindings module.
* Updated the README with a note about using the Graph class with the Python
bindings.
* Cleaned up an outdated docstring.
Updated the "Features" and "Introduction" sections of the README.
* Fixed typo in kwds dict (Mladen Milankovic).
* Updated acknowledgements.

2009.03.29
